WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213380
LibWebRTCSocketClient::sendTo is too verbose in case of error
https://bugs.webkit.org/show_bug.cgi?id=213380
Summary
LibWebRTCSocketClient::sendTo is too verbose in case of error
youenn fablet
Reported
2020-06-19 08:40:29 PDT
LibWebRTCSocketClient::sendTo is too verbose in case of error
Attachments
Patch
(2.49 KB, patch)
2020-06-19 08:41 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-06-19 08:41:53 PDT
Created
attachment 402287
[details]
Patch
EWS
Comment 2
2020-06-19 09:34:23 PDT
Committed
r263272
: <
https://trac.webkit.org/changeset/263272
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402287
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-19 09:35:18 PDT
<
rdar://problem/64534163
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug