LibWebRTCSocketClient::sendTo is too verbose in case of error https://bugs.webkit.org/show_bug.cgi?id=213380

Reviewed by Eric Carlson.

Only log error message if the error code is different from the previous one.

* NetworkProcess/webrtc/LibWebRTCSocketClient.cpp:
(WebKit::LibWebRTCSocketClient::sendTo):
* NetworkProcess/webrtc/LibWebRTCSocketClient.h:


Canonical link: https://commits.webkit.org/226181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263272 268f45cc-cd09-0410-ab3c-d52691b4dbfc